# computer-graphic

./: README.md
ЛБ2/: CMakeLists.txt  main.c  main.cpp
ЛБ2/lib/: Color.hpp  Drawable.hpp  Game.hpp  WinowSettings.hpp  color.h  game.h  includes.h  winsettings.h
ЛБ2/lib/characters/: character.h
ЛБ2/lib/interface/: Interface.hpp  button.h  interface.h
ЛБ2/lib/interface/buttons/: Button.hpp
ЛБ2/lib/interface/buttons/listeners/: ContinueButtonListener.hpp  ExitButtonListener.hpp  Listener.hpp  PauseButtonListener.hpp
ЛБ2/lib/interface/collections/: button_vector.h
ЛБ2/lib/primitives/: Rectangle.hpp  point.h  rectangle.h  texture.h  textured_rectangle.h
ЛБ3/: CMakeLists.txt  Lb3.cbp  Lb3.depend  Lb3.layout  main.c
ЛБ3/lib/: game.h  global_settings.h  includes.h  winsettings.h
ЛБ3/lib/characters/: character.h
ЛБ3/lib/interface/: button.h  interface.h
ЛБ3/lib/primitives/: animated_rectangle.h  texture.h  textured_rectangle.h
ЛБ4/: CMakeLists.txt  Lb4.cbp  Lb4.depend  Lb4.layout  main.c
ЛБ4/lib/: color.h  game.h  global_settings.h  includes.h  winsettings.h
ЛБ4/lib/characters/: character.h
ЛБ4/lib/interface/collections/: button_vector.h
ЛБ4/lib/map/: map.h
ЛБ4/lib/primitives/: animation.h  point.h  rectangle.h
ЛБ5/: Lb5.cbp  Lb5.depend  Lb5.layout  camera.cpp  camera.h  main.cpp
ЛБ6/: CMakeLists.txt  Lb6.cbp  Lb6.depend  Lb6.layout  main.cpp
ЛБ7/: Lb7.cbp  Lb7.depend  main.cpp
